Fix input border rendering on mobile

--- a/ui/app/css/itcss/components/editable-label.scss
+++ b/ui/app/css/itcss/components/editable-label.scss
@@ -15,6 +15,7 @@
     width: 250px;
     font-size: 14px;
     text-align: center;
+    border: 1px solid $alto;
 
     &--error {
       border: 1px solid $monzo;
